--- a/docs/javascript-dasar-1/value-variable.mdx
+++ b/docs/javascript-dasar-1/value-variable.mdx
@@ -76,4 +76,4 @@ Pemberian nama sebuah variable ada aturannya dengan tujuan supaya dapat dipahami
 
 ## Selesai&#33;
 
-Itulah yang perlu kamu ketahui tentang value dan variable di Javascript Dasar. Pastikan kamu **memahaminya dengan baik** karena keduanya adalah salah satu hal penting dalam bahasa pemrograman(tidak hanya Javascript).
+Itulah yang perlu kamu ketahui tentang value dan variable di Javascript Dasar. Pastikan kamu **memahaminya dengan baik** karena keduanya merupakan salah satu hal terpenting dalam pemrograman(tidak hanya Javascript).
