--- a/blog/2023/01/02/access-modifier/index.mdx
+++ b/blog/2023/01/02/access-modifier/index.mdx
@@ -7,6 +7,8 @@ tags: ["pemrograman dasar", "pemula"]
 
 ## Access Modifier
 
+<!--truncate-->
+
 _**Access modifier**_ merupakan sintaks yang bisa digunakan untuk memberi hak akses didalam objek. Access modifier digunakan dalam pemrograman berorientasi objek.
 Dalam bahasa Javascript, ada 4 jenis _access modifier_:
 
