continuing input output

--- a/docs/javascript-dasar-1/input-output.mdx
+++ b/docs/javascript-dasar-1/input-output.mdx
@@ -18,3 +18,13 @@ Javascript dapat menerima input dalam beberapa cara, antara lain:
 
 ## Output
 
+Berikut beberapa cara untuk mendapatkan output dalam pemrograman Javascript:
+
+### 1. InnerHTML
+
+`innerHTML` berarti memasukkan sesuatu kedalam elemen html. Untuk menggunakan `innerHTML` kamu perlu memanggil element HTML kemudian diberi value innerHTML dengan cara seperti berikut:
+
+```javascript
+const container = document.querySelector(".my-container");
+container.innerHTML = "Aku adalah container!";
+```
