--- a/docs/javascript-dasar-1/array.mdx
+++ b/docs/javascript-dasar-1/array.mdx
@@ -4,6 +4,8 @@ sidebar_position: 7
 
 # Array di Javascript
 
+Didalam pemrograman, kita akan sering menggunakan data. Entah data itu kita sendiri yang bikin, atau datang dari manapun, yang kemudian data itu akan kita olah agar bisa digunakan di aplikasi kita. Untuk dapat mengolah data, kita perlu mempelajari struktur data, salah satunya array.
+
 Array merupakan pengelompokan data-data yang sama menjadi satu kelompok.
 Dalam pemrograman Javascript, array bisa menyimpan tipe data apapun. Array bisa kita simpan kedalam variable seperti halnya value biasa.
 Contoh:
@@ -18,10 +20,4 @@ const angka = ["satu", 2, "tiga", true, null, undefined, Object];
 Meskipun sebuah array dapat menyimpan value dengan tipe data yang berbeda, akan tetapi saya tetap menganjurkan teman-teman untuk memperhatikan apakah satu data dengan data lain saling berkorelasi atau tidak. Contoh array yang baik adalah seperti variable `bilanganBulat` dan `hobi` diatas.
 :::
 
-## Kelebihan dan Kekurangan Array
-
-Berikut adalah kelebihan dan kekurangan penggunaan array didalam suatu program:
-
-### Kelebihan
-
-1. Array menunjuk banyak data dengan jenis yang sama
+---on progress---
