--- a/docs/javascript-dasar-1/function.mdx
+++ b/docs/javascript-dasar-1/function.mdx
@@ -31,7 +31,7 @@ tambah(1, 2); //output = 3
 
 Didalam pemrograman Javascript, kita bisa membuat function dengan beberapa cara, antara lain:
 
-### 1. Global Function
+### 1. Function Declaration
 
 Global function merupakan function biasa yang sering kita jumpai di beberapa bahasa pemrograman lain.
 Sesuai dengan penyebutannya, global function bisa diakses secara global, baik dari barisan kode diatasnya maupun dibawahnya.
