access modifier blog

--- a/blog/2023/01/02/access-modifier/index.mdx
+++ b/blog/2023/01/02/access-modifier/index.mdx
@@ -7,8 +7,11 @@ tags: ["pemrograman dasar", "pemula"]
 
 ## Access Modifier
 
-_**Access modifier**_ merupakan sintaks yang bisa digunakan untuk memberi hak akses didalam objek. Access modifier digunakan dalam pemrograman berorientasi objek.
-Dalam bahasa Javascript, ada 4 jenis _access modifier_:
+_**Access modifier**_ merupakan sintaks yang bisa digunakan untuk memberi hak akses didalam _class_ atau _objek_. Access modifier digunakan dalam pemrograman berorientasi objek(OOP).
+
+<!--truncate-->
+
+## 4 jenis _access modifier_:
 
 | Access modifier | Deskripsi                                                                       |
 | --------------- | ------------------------------------------------------------------------------- |
