finish object tutorial

--- a/docs/javascript-dasar/object.mdx
+++ b/docs/javascript-dasar/object.mdx
@@ -80,6 +80,6 @@ mobil.roda.ukuran; //Output: ["P235/55WR17", "P235/50WR18", "P255/40WR19", "P295
 
 :::
 
-### Selesai!
+## Selesai!
 
 Itulah yang perlu kamu ketahui tentang dasar object di Javascript. Pastikan kamu **memahaminya dengan baik** karena object merupakan salah satu hal terpenting dalam pemrograman(tidak hanya Javascript).
